# deeptte-pytorch2

./: .gitignore  .railwayignore  Dockerfile  README.md  pyproject.toml
deeptte/: config.py  data.py  evaluate.py  geo.py  serve.py  train.py
deeptte/models/: attr.py  geo_conv.py  net.py  spatio_temporal.py
deeptte/static/: index.html  presets.js
deploy/: model.pt  stats.json
docs/superpowers/plans/: 2026-07-11-deeptte-revival.md  2026-07-11-improvements-porto.md
docs/superpowers/specs/: 2026-07-11-deeptte-revival-design.md  2026-07-11-improvements-porto-design.md
scripts/: hit_endpoint.py  porto_prepare.py  run_experiments.sh
tests/: test_config.py  test_data.py  test_model.py  test_serve.py
