[project]
name = "deeptte"
version = "0.1.0"
description = "Modern PyTorch 2 revival of DeepTTE (AAAI 2018 travel-time estimation)"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.3",
    "numpy>=1.26",
    "tqdm>=4.66",
]

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["deeptte"]
